--- a/app/src/main/res/layout/fragment_bmi_list.xml
+++ b/app/src/main/res/layout/fragment_bmi_list.xml
@@ -10,5 +10,5 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".bmiListFragment"
+        tools:context=".BmiListFragment"
         tools:listitem="@layout/fragment_bmi"/>
