--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,14 +30,14 @@
             app:layout_constraintBottom_toBottomOf="@+id/bmiList"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="64dp"
             app:layout_constraintTop_toTopOf="@+id/bmiList" app:layout_constraintVertical_bias="0.0"/>
-    <fragment
-            android:layout_width="0dp"
-            android:layout_height="0dp" android:name="com.example.bmi_application.BmiInsertFragment"
-            android:id="@+id/container"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="32dp" android:layout_marginTop="24dp"
-            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/insert"
-            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="386dp"
+            android:layout_height="599dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/bmiList"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:id="@+id/container">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
