--- a/app/src/main/res/layout/fragment_bmi_insert.xml
+++ b/app/src/main/res/layout/fragment_bmi_insert.xml
@@ -4,7 +4,7 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".bmiIncertFragment"
+                                                   tools:context=".BmiInsertFragment"
                                                    android:id="@+id/bmiInsertFragment">
     <TextView
             android:text="あなたのBMIは      です。"
@@ -52,9 +52,10 @@
             android:ems="10"
             android:textSize="14sp"
             android:id="@+id/inputHeight"
-            tools:layout_editor_absoluteY="106dp" app:layout_constraintStart_toEndOf="@+id/textView7"
+            app:layout_constraintStart_toEndOf="@+id/textView7"
             android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/textView9" android:text="   "/>
+            app:layout_constraintEnd_toStartOf="@+id/textView9" android:text="   "
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="80dp" android:maxLength="5"/>
     <TextView
             android:text="体重"
             android:layout_width="wrap_content"
@@ -101,7 +102,8 @@
             android:id="@+id/inputWeight"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@+id/inputHeight" app:layout_constraintStart_toStartOf="@+id/inputHeight"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/inputHeight"/>
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/inputHeight"
+            android:maxLength="5"/>
     <Button
             android:text="削除"
             android:layout_width="wrap_content"
