--- a/app/src/main/res/layout/fragment_bmi_insert.xml
+++ b/app/src/main/res/layout/fragment_bmi_insert.xml
@@ -37,14 +37,13 @@
             android:layout_width="300dp"
             android:layout_height="80dp"
             android:inputType="textPersonName"
-            android:text="言い訳を書きたければ書いてください"
             android:ems="10"
             android:id="@+id/inputComment"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/bmiResult"/>
+            app:layout_constraintTop_toBottomOf="@+id/bmiResult" android:hint="メモ："/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,7 +53,7 @@
             android:id="@+id/inputHeight"
             app:layout_constraintStart_toEndOf="@+id/textView7"
             android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/textView9" android:text="   "
+            app:layout_constraintEnd_toStartOf="@+id/textView9"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="80dp" android:maxLength="5"/>
     <TextView
             android:text="体重"
